drugi commit, no ciekawe

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  HAHAHAHA
+  Testujemy githuba poraz drugi. Tym razem zrobię add file, i z pushuję w master.
 </p>
 
 </body>
