nowa gałąź stworzona pushem HEAD:nowa

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Testujemy githuba poraz drugi. Tym razem zrobię add file, i z pushuję w master.
+  Tworzymy nową gałąź poprzez push.
 </p>
 
 </body>
