Stworzyłem branch, teraz go pushuje

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Tworzymy nową gałąź poprzez push.
+  Zachodzą nowe zmiany. Stworzyłem branch
+  git branch jeszczenowsza
+
+  Następnie wybrałem ten branch, jeszcze niewidoczny w githubie. Wprowadziłem zmiany w pliku. Dodałem plik add file do branchu.
+
+  I dokonałem pushu.
 </p>
 
 </body>
